Update Pages “floor-plans”

--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -3,7 +3,7 @@ title: Elevations & Floor Plans
 description: description
 sections:
   - images: []
-    title: Spring Run Townhom Elevations & Floor Plans
+    title: Spring Run Townhome Elevations & Floor Plans
     type: header
   - images:
       - image: /images/uploads/23c4a36303ee6e4caaf4acec0bd70b88-triumphcmg.png
