--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -56,12 +56,28 @@ sections:
       156 Townhomes in 6 phases. Construction of homes will being in July, 2018.
     title: Phases
     type: content_only
-  - content: |-
+  - content: >-
       ### Contact
-      **Aaron Schroeder** [**801-808-7096**](tel:8018087096)
+
+
+      [**Aaron Schroeder**](mailto:aaron@utahrealty.com)
+      [**801-808-7096**](tel:8018087096)
+
+
+
       **Jess Schroeder** [**801-809-4997**](tel:8018094997)
+
+
+
+
+      Text Welcome
+
+
+
+
       ### Model Home Hours
+
+
       **To Be Established When Model Is Completed**
     title: Appointments to See
     type: content_only
-
