Update Pages “floor-plans”

--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -27,8 +27,8 @@ sections:
         url: ''
     title: Floor Plan Options
     type: link_list
-  - subtitle: '$299,990'
-    title: Priced From
+  - subtitle: 'Priced From $299,990'
+    title: ''
     type: link_list
   - images:
       - image: /images/uploads/screen-shot-2019-06-05-at-8.58.18-am.png
@@ -49,6 +49,6 @@ sections:
         url: ''
     title: Floor Plan Options
     type: link_list
-  - subtitle: '$299,990'
-    title: Priced From
+  - subtitle: 'Priced From $299,990'
+    title: ''
     type: link_list
