--- a/data/pages/the-perfect-location.yml
+++ b/data/pages/the-perfect-location.yml
@@ -15,8 +15,7 @@ sections:
   - content: ''
     files:
       - label: Get Directions
-        url: >-
-          https://www.google.com/maps/place/Spring+Run+Community,+New+Homes+in+Eagle+Mountain/@40.385706,-111.9834654,17z/data=!3m1!4b1!4m5!3m4!1s0x874d7dbe1ab0e151:0x615aa320d04b00c3!8m2!3d40.385706!4d-111.9812767
+        url: 'https://www.google.com/maps/@40.3855847,-111.976686,17.01z'
     images:
       - image: /images/uploads/screen-shot-2019-06-05-at-11.36.24-am.png
     title: ''
