--- a/data/footer.yml
+++ b/data/footer.yml
@@ -2,9 +2,7 @@ columns:
   - content: |-
       [Realty Utah, LLC](https://utahrealty.com/)
 
-
       [801.685.2711](tel:8016852711)
 
-
-      <mailto:email@utahrealty.com>
+      [www.UtahRealty.com](www.utahrealty.com)
     label: Offered By
