Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -52,9 +52,6 @@ sections:
     title: Come have fun with us!
     type: header
   - content: >-
-      ### Contact
-
-
       [**Aaron Schroeder**](mailto:aaron@utahrealty.com)
       [**801-808-7096**](tel:8018087096)
 
@@ -65,7 +62,7 @@ sections:
 
 
 
-      Text Welcome
+      Texts Welcome
 
 
 
