Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -23,30 +23,26 @@ sections:
       - image: /images/uploads/5e3d85d0f1d09b448d4e48acf7f1e7e7-triumphcmg.png
     type: images_only
   - content: >-
-      Spring Run is a place to play and enjoy a happy life. There will be two
-      large grassed parks for the
+      Spring Run is a place to play and enjoy a happy life.There will be two
+      large grassed parks for the entire community. The first park is ready for
+      family fun.
 
-      entire community. The first park is ready for family fun. The two parks
-      will have playground
 
-      equipment with slides, climbing, strength & skill features. They will
-      include pickle ball courts, basket
+      The parks are designed for playing and dreaming. The two parks will have
+      playground equipment with slides, climbing and strength & skill features.
+      They will include pickle ball courts, basketball and a pavilion with
+      tables.
 
-      ball and a pavilion with tables. The parks are are designed for playing
-      and dreaming.
 
       The parks will be connected to the community by over 5 miles of trails for
-      walking, jogging and
+      walking, jogging and biking. Trails will lead to a future hill-top park
+      with commanding views of the Wasatch mountains and Utah Lake.
 
-      biking. Trails will lead to a hill-top park with commanding views of the
-      Wasatch mountains and Utah
 
-      Lake.
-
-      The townhomes will also have their own private places to play. They will
-      have a clubhouse, a
-
-      swimming pool and meandering trails through the village.
+      There will be 156 townhomes in the Village that will have their own
+      private places to play. They will have a clubhouse, a swimming pool and
+      meandering trails through the village. Each home will have private parking
+      and shared parking for guests will be available.
     type: content_only
   - content: ''
     title: Come have fun with us!
