Update Settings “footer”

--- a/data/footer.yml
+++ b/data/footer.yml
@@ -4,5 +4,5 @@ columns:
 
       [801.685.2711](tel:8016852711)
 
-      [www.UtahRealty.com](www.utahrealty.com)
+      [www.UtahRealty.com](https://www.utahrealty.com)
     label: Offered By
