--- a/data/pages/the-perfect-location.yml
+++ b/data/pages/the-perfect-location.yml
@@ -15,7 +15,8 @@ sections:
   - content: ''
     files:
       - label: Get Directions
-        url: 'https://www.google.com/maps/@40.3855847,-111.976686,17.01z'
+        url: >-
+          https://www.google.com/maps/place/40%C2%B023'10.5%22N+111%C2%B058'39.6%22W/@40.3862551,-111.9798617,17z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d40.3862507!4d-111.9776731
     images:
       - image: /images/uploads/screen-shot-2019-06-05-at-11.36.24-am.png
     title: ''
