--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -22,7 +22,7 @@ sections:
     type: link_list
   - files:
       - file: >-
-          /images/uploads/2019.01.01-purchase-and-sale-agreement-spring-run-townhomes.docx
+          /images/uploads/2019.01.01-purchase-and-sale-agreement-spring-run-townhomes.pdf
         label: Purchase & Sales Agreement
         url: '#'
       - file: /images/uploads/2019.01.01-seller-disclosures-spring-run-townhomes.pdf
