--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -24,6 +24,7 @@ sections:
       - file: >-
           /images/uploads/2019.09.19-purchase-and-sale-agreement-spring-run-townhomes.pdf
         label: Purchase & Sale Agreement
+        url: '#'
       - file: /images/uploads/2019.01.01-seller-disclosures-spring-run-townhomes.pdf
         label: Seller Disclosures
         url: '#'
