Update Pages “documents”

--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -25,7 +25,7 @@ sections:
           /images/uploads/2019.09.19-purchase-and-sale-agreement-spring-run-townhomes.pdf
         label: Purchase & Sale Agreement
         url: '#'
-      - file: /images/uploads/2019.01.01-seller-disclosures-spring-run-townhomes.pdf
+      - file: /images/uploads/seller-disclosures-09.20.19.pdf
         label: Seller Disclosures
         url: '#'
       - {}
