--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -16,6 +16,8 @@ sections:
       - file: /images/uploads/2019-5-7-aspen-w_o-logo.pdf
         label: The Aspen
         url: ''
+      - file: /images/uploads/the-auburn.pdf
+        label: The Auburn
       - file: /images/uploads/2019-5-7-cottonwood-derivative-w_o-logo.pdf
         label: The Cottonwood - Derivative
         url: ''
@@ -27,6 +29,10 @@ sections:
         url: ''
     title: Floor Plan Options
     type: link_list
+  - subtitle: >-
+      (A few 3-Story Units with basements may not include elevation providing
+      for a walk out.)
+    type: link_list
   - subtitle: 'Priced From $316,000'
     title: ''
     type: link_list
@@ -35,14 +41,14 @@ sections:
     title: 2 Story Walk-Up Units
     type: images_only
   - files:
-      - file: /images/uploads/1-11-19_redwood.pdf
-        label: The Redwood
-        url: ''
       - file: /images/uploads/1-11-19_birch.pdf
         label: The Birch
         url: ''
       - file: /images/uploads/1-11-19_birch_derivative.pdf
         label: The Birch - Derivative
+        url: ''
+      - file: /images/uploads/1-11-19_redwood.pdf
+        label: The Redwood
         url: ''
       - file: /images/uploads/1-11-19_redwood_derivative.pdf
         label: The Redwood - Derivative
