Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -52,20 +52,18 @@ sections:
       [**801-808-7096**](tel:8018087096)
 
 
-
       **Jess Schroeder** [**801-809-4997**](tel:8018094997)
 
 
-
-
       Texts Welcome
-
-
 
 
       ### Model Home Hours
 
 
       **To Be Established When Model Is Completed**
+
+
+      **Follow our construction progress on Instagram @SpringRunTownhomes**
     title: Appointments to See
     type: content_only
