Update Pages “floor-plans”

--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -19,7 +19,7 @@ sections:
       - file: /images/uploads/the-auburn.pdf
         label: The Auburn
       - file: /images/uploads/2019-5-7-cottonwood-derivative-w_o-logo.pdf
-        label: The Cottonwood - Derivative
+        label: The Cottonwood Plus - Derivative
         url: ''
       - file: /images/uploads/2019-5-7-cottonwood-w_o-logo.pdf
         label: The Cottonwood
