Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -61,7 +61,10 @@ sections:
       ### Model Home Hours
 
 
-      **To Be Established When Model Is Completed**
+      MODEL NOW OPEN!
+
+
+      Mon-Sat 11 AM - 6 PM
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
