--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -46,13 +46,13 @@ sections:
         label: The Birch
         url: ''
       - file: /images/uploads/1-11-19_birch_derivative.pdf
-        label: The Birch Plus (Derivative)
+        label: The Birch (Derivative)
         url: ''
       - file: /images/uploads/1-11-19_redwood.pdf
         label: The Redwood
         url: ''
       - file: /images/uploads/1-11-19_redwood_derivative.pdf
-        label: The Redwood Plus (Derivative)
+        label: The Redwood (Derivative)
         url: ''
     title: Floor Plan Options
     type: link_list
