--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -59,3 +59,6 @@ sections:
   - subtitle: 'Priced From $279,000'
     title: ''
     type: link_list
+  - files:
+      - file: /images/uploads/spring-run-phase-c-1-availability-1-28-20.pdf
+    title: Availability
