--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -61,4 +61,5 @@ sections:
     type: link_list
   - files:
       - file: /images/uploads/spring-run-phase-c-1-availability-1-28-20.pdf
+        label: As of January 2020
     title: Availability
