--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -60,7 +60,7 @@ sections:
     title: ''
     type: link_list
   - files:
-      - file: /images/uploads/spring-run-phase-c-1-availability-1-28-20.pdf
-        label: As of January 2020
+      - file: /images/uploads/spring-run-phase-c-1-availability-1-31-20.pdf
+        label: 'As of January 31, 2020'
     title: Availability
     type: link_list
