Update Settings “navigation”

--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -9,5 +9,7 @@ links:
     url: /clubhouse
   - label: Elevations & Floor Plans
     url: /floor-plans
+  - label: Model Home Photos
+    url: /Model Home
   - label: Documents
     url: /documents
