--- a/data/pages/model-home-photos.yml
+++ b/data/pages/model-home-photos.yml
@@ -18,19 +18,35 @@ sections:
       - image: /images/uploads/_dsc4169.jpg
         label: '6'
       - image: /images/uploads/_dsc4166.jpg
+        label: '7'
       - image: /images/uploads/_dsc4178.jpg
+        label: '8'
       - image: /images/uploads/_dsc4184.jpg
+        label: '9'
       - image: /images/uploads/_dsc4190.jpg
+        label: '10'
       - image: /images/uploads/_dsc4193.jpg
+        label: '11'
       - image: /images/uploads/_dsc4196.jpg
+        label: '12'
       - image: /images/uploads/_dsc4199.jpg
+        label: '13'
       - image: /images/uploads/_dsc4238.jpg
+        label: '14'
       - image: /images/uploads/_dsc4214.jpg
+        label: '15'
       - image: /images/uploads/_dsc4235.jpg
+        label: '16'
       - image: /images/uploads/_dsc4217.jpg
+        label: '17'
       - image: /images/uploads/_dsc4223.jpg
+        label: '18'
       - image: /images/uploads/_dsc4148.jpg
+        label: '19'
       - image: /images/uploads/_dsc4154.jpg
+        label: '20'
       - image: /images/uploads/_dsc4160.jpg
+        label: '21'
       - image: /images/uploads/_dsc4163.jpg
+        label: '22'
     type: carousel
