--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -15,12 +15,13 @@ sections:
     type: images_only
   - content: ''
     images:
-      - image: /images/uploads/23c4a36303ee6e4caaf4acec0bd70b88-triumphcmg.png
+      - image: /images/uploads/20009-spring-run-2020.03.24_9-photo.jpg
     title: ...the perfect life-style community!
     type: images_only
   - content: ''
     images:
-      - image: /images/uploads/5e3d85d0f1d09b448d4e48acf7f1e7e7-triumphcmg.png
+      - image: >-
+          /images/uploads/20009-spring-run-2020.04.02_rear-yard-test_15-photo.jpg
     type: images_only
   - content: >-
       Spring Run is a place to play and enjoy a happy life.There will be two
