--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -62,6 +62,6 @@ sections:
     type: link_list
   - files:
       - file: /images/uploads/spring-run-phase-c-1-availability-3.27.20.pdf
-        label: 'As of March 27, 2020 (Here)'
+        label: 'As of March 27, 2020 - Click Here'
     title: Availability Map
     type: link_list
