--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -31,8 +31,8 @@ sections:
     title: Floor Plan Options
     type: link_list
   - subtitle: >-
-      (A few 3-Story Units with basements may not include elevation providing
-      for a walk out.)
+      (Some 3-Story Units with basements in Phase 1 and 2 will not include walk
+      out basements.))
     type: link_list
   - subtitle: 'Priced From $316,000'
     title: ''
