Update Settings “navigation”

--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -7,7 +7,7 @@ links:
     url: /community
   - label: Clubhouse
     url: /clubhouse
-  - label: Elevations & Floor Plans
+  - label: Floor Plans
     url: /floor-plans
   - label: Model Home Photos
     url: /Model Home
