Update Settings “seo”

--- a/data/seo.yml
+++ b/data/seo.yml
@@ -1,5 +1,5 @@
-description: Lorem ipsum description
+description: Spring Run Townhomes
 keywords:
-  - keyword: keyword1
-  - keyword: keyword2
-  - keyword: keyword3
+  - keyword: Utah County Townhome
+  - keyword: Utah County Townhouse
+  - keyword: Townhouse for sale utah
