Update Settings “navigation”

--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -11,7 +11,7 @@ links:
     url: /floor-plans
   - label: Availability
     url: /availability
-  - label: Model Home Photos
+  - label: Model Home
     url: /Model Home
   - label: Documents
     url: /documents
