--- a/data/pages/availbility.yml
+++ b/data/pages/availbility.yml
@@ -4,6 +4,7 @@ description: Townhomes Availability
 sections:
   - files:
       - file: /images/uploads/availability-4.13.20.jpg
+        label: Availability
     subtitle: 'As of April 13, 2020'
     title: Availability Map
     type: images_only
