--- a/data/pages/availbility.yml
+++ b/data/pages/availbility.yml
@@ -2,9 +2,7 @@ slug: Availability
 title: Availbility
 description: Townhomes Availability
 sections:
-  - files:
-      - file: /images/uploads/availability-4.13.20.jpg
-        label: Availability
+  - files: []
     images:
       - image: /images/uploads/availability-4.13.20.jpg
     subtitle: 'As of April 13, 2020'
