Update Settings “navigation”

--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -9,8 +9,8 @@ links:
     url: /clubhouse
   - label: Floor Plans
     url: /floor-plans
-  - label: Availability
-    url: /availability
+  - label: Move-In Ready
+    url: /move-in ready
   - label: Model Home
     url: /Model Home
   - label: Documents
