Update Pages “availbility”

--- a/data/pages/availbility.yml
+++ b/data/pages/availbility.yml
@@ -7,23 +7,21 @@ sections:
 
       $322,937         Cottonwood (Derivative) Floorplan
 
-
-
       Unit 104          9659 N Aaron Ave
 
       $348,407         Dover Floorplan
-
-
 
       Unit 107          9681 N Aaron Ave
 
       $347,196         Auburn Floorplan
 
-
-
       Unit 123          9674 N Aaron Ave
 
       $300,368          Redwood Floorplan
+
+
+
+      Contact Aaron or Jess Schroeder for more information.
     files: []
     images: []
     title: Move-In Ready
