Update Pages “documents”

--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -22,7 +22,7 @@ sections:
     type: link_list
   - files:
       - file: >-
-          /images/uploads/-v.2-3-21-2020-purchase-and-sale-agreement-spring-run-townhomes.pdf
+          /images/uploads/3-21-2020-purchase-and-sale-agreement-spring-run-townhomes.pdf
         label: Purchase & Sale Agreement
         url: '#'
       - file: /images/uploads/seller-disclosures-09.20.19.pdf
