Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,9 +3,9 @@ title: Availability
 description: townhouse eagle mountain utah
 sections:
   - images: []
-    subtitle: 'As of April 30, 2020'
+    subtitle: 'As of May 14, 2020'
     title: Availability
     type: header
   - images:
-      - image: /images/uploads/availability-4.13.20.jpg
+      - image: /images/uploads/availability-map-5-14-20.jpg
     type: images_only
