Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -68,6 +68,17 @@ sections:
       Mon-Sat 11 AM - 6 PM
 
 
+
+
+      _Special Model Home Hours for The Utah County Parade of Homes_\
+
+      July 23rd - Aug 8th\
+
+      Monday: By Appt Only\
+
+      Tuesday - Saturday: 12 - 9 PM
+
+
       **Follow our construction progress on Instagram @SpringRunTownhomes**
     title: Appointments to See
     type: content_only
