Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,9 +3,9 @@ title: Availability
 description: townhouse eagle mountain utah
 sections:
   - images: []
-    subtitle: 'As of August 10, 2020'
+    subtitle: 'As of August 20, 2020'
     title: Availability
     type: header
   - images:
-      - image: /images/uploads/availability-map-8.10.20.jpg
+      - image: /images/uploads/availability-map-8-20-20.jpg
     type: images_only
