Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -65,7 +65,7 @@ sections:
       MODEL NOW OPEN!
 
 
-      Mon-Sat 11 AM - 6 PM
+      Model Hours 11 AM - 6 PM, Closed Sunday & Wednesday
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
