Update Pages “documents”

--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -21,8 +21,7 @@ sections:
     title: Spring Run Townhomes & HOA Docs
     type: link_list
   - files:
-      - file: >-
-          /images/uploads/8-28-2020-purchase-and-sale-agreement-spring-run-townhomes.pdf
+      - file: /images/uploads/9-8-2020-repc.pdf
         label: Purchase & Sale Agreement
         url: '#'
       - file: /images/uploads/spring-run-townhomes-seller-disclosures-8.28.20.pdf
